--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -1,166 +1,218 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-#header-section{
-    width:100%;
-    background-color: white;
-    padding: 20px 0;
+#header-section {
+  width: 100%;
+  background-color: white;
+  padding: 20px 0;
 }
-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 85%;
-    margin: auto;
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 85%;
+  border-bottom: 1px solid #1a1a1f;
+  margin: auto;
 }
-#nav-ul{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 45px;
-    list-style: none;
+#nav-ul {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 45px;
+  list-style: none;
 }
-#nav-ul li button{
-    background-color: black;
-    color: white;
-    border: none;
-    padding: 8px 10px;
-    cursor: pointer;
-    border-radius: 7px;
+#nav-ul li button {
+  background-color: black;
+  color: white;
+  border: none;
+  padding: 8px 10px;
+  cursor: pointer;
+  border-radius: 7px;
+}
+.hamburger{
+  display: none;
 }
 #hero-section {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
-    /* background: linear-gradient(to right, yellow,green , blue); */
-    padding: 50px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  padding: 50px;
 }
-#hero-section  div{
-    background-color: rgb(236, 245, 248);
-    color: black;
-    padding: 10px 12px;
-    border-radius: 20px;
-    margin-top: 40px;
+#hero-section div {
+  background-color: rgb(236, 245, 248);
+  color: black;
+  padding: 10px 12px;
+  border-radius: 20px;
+  margin-top: 40px;
 }
-#span{
-    color: rgb(237, 101, 3);
-    font-size: 80px;
-    width: 90%;
-    max-width: 900px;
-    text-align: center;
-    line-height: 1.2;
-    
+#span {
+  color: rgb(237, 101, 3);
+  font-size: 80px;
+  width: 90%;
+  text-align: center;
+  line-height: 1.2;
+  /* background: linear-gradient(to right, yellow, green, blue); */
+  background: linear-gradient(97.1deg, #C41740 4.8%, #EA9C28 100%);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
 }
-.first-para{
-    margin-top: -10px;
-    font-size: 20px;
+.first-para {
+  margin-top: -10px;
+  font-size: 20px;
 }
 /* blogs section */
-#blogs-section{
-    background-color: lightgrey;
-    padding: 30px 0px;
+.blog-section {
+  background-color: #F2F4F7;
+  padding: 30px 0px;
 }
 
-.view-all{
-    width: 68%;
-    margin:auto;
-    display: flex;
-    justify-content: space-between;
+.View-all {
+  width: 68%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
 }
-.view-all button{
-    background-color: white;
-    border: 0;
-    border-radius: 7px;
-    cursor: pointer;
-    padding: 8px 12px;
+.View-all button {
+  background-color: white;
+  border: 0;
+  border-radius: 7px;
+  cursor: pointer;
+  padding: 8px 12px;
 }
-.blogs-container{
-    width: 65%;
-    margin: 40px auto;
-    display: flex;
-    justify-content: space-evenly;
-    gap: 30px;
-    flex-direction: column;
+.blogs-container {
+  width: 65%;
+  margin: 40px auto;
+  display: flex;
+  justify-content: space-evenly;
+  gap: 30px;
+  flex-direction: column;
 }
-.blog{
-    padding: 20px;
-    width: 100%;
-    display: flex;
-    background-color: white;
-    justify-content: space-between;
-    border-radius: 20px;
+.blog {
+  padding: 20px;
+  width: 100%;
+  display: flex;
+  background-color: white;
+  justify-content: space-between;
+  border-radius: 20px;
 }
-.blog-text{
-    width: 70%;
+.blog-text {
+  width: 70%;
 }
-.blog-text h3{
-    margin-top: 12px;
+.blog-text h3 {
+  margin-top: 12px;
 }
-.blog-text p{
-    margin-top: 15px;
-    color: grey;
+.blog-text p {
+  margin-top: 15px;
+  color: grey;
 }
-.blog-image{
+.blog-image {
   width: 28%;
 }
-/* blog section 2 */
-#blog-section-2{
-background-color: lightgrey;
-    padding: 10px 0px;
 
+#footer {
+  background-color: white;
 }
-.view-all{
-    width: 68%;
-    margin:auto;
-    display: flex;
-    justify-content: space-between;
+#footer h2 {
+  color: chocolate;
+  text-align: center;
+  margin: 40px 0 20px 0;
+  font-size: 25px;
 }
-/* blog section 3 */
-#blog-section-3{
-    background-color: lightgrey;
-    padding: 10px 0px;
+#footer p {
+  color: #475467;
+  text-align: center;
 }
-.view-all{
-    width: 68%;
-    margin:auto;
-    display: flex;
-    justify-content: space-between;
+.p2 {
+  padding-top: 20px;
+  padding-bottom: 7px;
+  font-size: 12px;
 }
-#footer{
-    background-color: white; 
+#form {
+  padding: 20px;
+  text-align: center;
 }
-#footer h2{
-    color: chocolate;
-    text-align: center;
-    margin: 40px 0 20px 0;
-    font-size: 25px;
+input {
+  padding: 7px;
+  width: 24%;
+  border: 2px solid grey;
+  border-radius: 7px;
+  margin: 18px 0;
 }
-#footer p{
-    color: #475467;
-    text-align: center;
+.button {
+  background-color: black;
+  color: white;
+  padding: 6px 8px;
+  border-radius: 7px;
+  border: 0;
 }
-.p2{
-    padding-top: 20px;
-    font-size: 12px;
+
+/* Responsive design  */
+@media(max-width: 768px) {
+  #menu-icon{
+    /* display: block; */
+    cursor: pointer;
+    /* border: 10px solid red; */
+  }
+  
+
+   #nav-ul{
+    display: none;
+    position: fixed;
+    /* box-shadow: #EA9C28; */
+    right: 0px;
+    width: 70vw;
+    height: 100vh;
+    top: 0;
+    background-color: #0000003f;
+  }
+  #nav-ul li:hover{
+    color: #fff;
+  }
+/* .nav-bar{
+    list-style: none;
+    padding: 40px;
+    width: 80px;
+} */
+
+.hamburger{
+  display: block;
 }
-#form{
-    padding: 20px;
-    text-align: center;
+.hamburger:hover + #nav-ul, #nav-ul:hover{
+  display: block;
+  position: absolute;
+  padding: 20px 12px;
+  background-color: #000000a0;
+  line-height: 2.5;
+  gap: 20px;
+  top: 30px;
+  font-size: large;
+  align-items: center;
+  /* width: 100px; */
 }
-input{
-    padding: 7px;
-    width: 22%;
-    border: 2px solid grey;
-    border-radius: 7px;
-    margin: 18px 0;
-}
-.button{
-    background-color: black;
-    color: white;
-    padding: 6px 8px;
-    border-radius: 7px;
-    border: 0;
-}
+  #span{
+    font-size: 40px;
+  }
+  .blogs-container{
+    width: 80%;
+    align-items: center;
+  }
+  .blog{
+    width: 100%;
+    flex-direction: column-reverse;
+    gap: 20px;
+  }
+  .blog-texts{
+    width: 100%;
+  }
+  .blog-image{
+    width: 100%;
+    padding: 0;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 8px;
+  }
+} 
